fix(variables): tweak surface bg in dark mode

--- a/src/base/variables.css
+++ b/src/base/variables.css
@@ -48,11 +48,11 @@
   /* Shadows */
   --shadow-elevation-low: 0 0.0625rem 0.125rem 0 var(--c-shadow);
 
-  --shadow-elevation-medium: var(--shadow-elevation-low),
-    0 0.15rem 0.75rem -0.2rem var(--c-shadow);
+  --shadow-elevation-medium:
+    var(--shadow-elevation-low), 0 0.15rem 0.75rem -0.2rem var(--c-shadow);
 
-  --shadow-elevation-high: var(--shadow-elevation-low),
-    0 0.3rem 1.5rem -0.3rem var(--c-shadow);
+  --shadow-elevation-high:
+    var(--shadow-elevation-low), 0 0.3rem 1.5rem -0.3rem var(--c-shadow);
 
   /* Theme */
   --tint: 165;
@@ -70,7 +70,7 @@
   --neutral-500: oklch(from var(--primary) 55% 0.025 h);
   --neutral-600: oklch(from var(--primary) 45% 0.02 h);
   --neutral-700: oklch(from var(--primary) 25% 0.018 h);
-  --neutral-800: oklch(from var(--primary) 22% 0.015 h);
+  --neutral-800: oklch(from var(--primary) 22% 0.017 h);
   --neutral-900: oklch(from var(--primary) 18% 0.012 h);
   --neutral-950: oklch(from var(--primary) 13% 0.005 h);
 
